Did complete API transition. JCpg now only used the Cpg API
Changed some php communicator code to use Nitin's webapi in the near future
Fixed some Nullpointer exceptions in the temp login code
Deselect tree selections when a picture is selected from the (mega)list
JCpg now does a correct calculation of the directory in which the user's photo's are stored: 10000 + user_id
Did some changes to the crop editor code. The crop selection rectangle is now controlable by the mouse
Fixed nullpointer exception in the temporary syncing code
Found a bug in JCpgPictureAdder: when using apple + A (to select all) in a map with pictures, a java.lang.ArrayIndexOutOfBoundsException: -1 exception is generated form with Apple's own UI java code. Selecting the same files manually, will not throw this exception
Fixed a bug where JCpg wasn't always able to copy a local file to the JCpg local album
The usermanager's offline button is disabled when there is now local Coppermine configuration
The Coppermine configuration is now also saved to an XML file
Because of the complete XML transition, I removed all implementations of the Java Serialisable class
A category can have subcategories and albums
The main gallery can now also have albums
Found bug in Mac OS X Aqua UI classes when adding pictures
Fixed bug where it was possible there were no allowed files to select in the Picture Adder
ServerManager uses XML now
UserManager uses XML now
Complete XML transition: only XML is used to store the current gallery state in disk
Filled in username and pwd are now stored in file
Hardcoded username and pwd are now removed
Fixed bug where JCpg always added a _ after the user's prefix
Fixed a bug where the z order of windows were not ok
Partially ported JCpg to JVM 6.0
Fixed bug when saving the gallery to current.dat when deleting categories
Added a Confirm Manager class so users can confirm certain actions
Changed colors of UI
Added an Album Previewer using threads. Needs better memory usage